Fix immutable list